syntax="proto3";
option go_package = "./proto/metadata";

package metadata_service;

service MetadataService{
    rpc CollectMetadata(MetadataRequest) returns (DataResponse);
}

message MetadataRequest {
    string server_id = 1;
}

message DataResponse{
    string message = 1;
    string name = 2;
    string region = 3;
}

